cvimrc_parser/parser.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */
(function(root) {
    "use strict";

    function peg$subclass(child, parent) {
        function ctor() {
            this.constructor = child;
        }
        ctor.prototype = parent.prototype;
        child.prototype = new ctor();
    }

    function peg$SyntaxError(message, expected, found, location) {
        this.message = message;
        this.expected = expected;
        this.found = found;
        this.location = location;
        this.name = "SyntaxError";

        if (typeof Error.captureStackTrace === "function") {
            Error.captureStackTrace(this, peg$SyntaxError);
        }
    }

    peg$subclass(peg$SyntaxError, Error);

    peg$SyntaxError.buildMessage = function(expected, found) {
        var DESCRIBE_EXPECTATION_FNS = {
            literal: function(expectation) {
                return "\"" + literalEscape(expectation.text) + "\"";
            },

            "class": function(expectation) {
                var escapedParts = "",
                    i;

                for (i = 0; i < expectation.parts.length; i++) {
                    escapedParts += expectation.parts[i] instanceof Array ?
                        classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1]) :
                        classEscape(expectation.parts[i]);
                }

                return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
            },

            any: function(expectation) {
                return "any character";
            },

            end: function(expectation) {
                return "end of input";
            },

            other: function(expectation) {
                return expectation.description;
            }
        };

        function hex(ch) {
            return ch.charCodeAt(0).toString(16).toUpperCase();
        }

        function literalEscape(s) {
            return s
                .replace(/\\/g, '\\\\')
                .replace(/"/g, '\\"')
                .replace(/\0/g, '\\0')
                .replace(/\t/g, '\\t')
                .replace(/\n/g, '\\n')
                .replace(/\r/g, '\\r')
                .replace(/[\x00-\x0F]/g, function(ch) {
                    return '\\x0' + hex(ch);
                })
                .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) {
                    return '\\x' + hex(ch);
                });
        }

        function classEscape(s) {
            return s
                .replace(/\\/g, '\\\\')
                .replace(/\]/g, '\\]')
                .replace(/\^/g, '\\^')
                .replace(/-/g, '\\-')
                .replace(/\0/g, '\\0')
                .replace(/\t/g, '\\t')
                .replace(/\n/g, '\\n')
                .replace(/\r/g, '\\r')
                .replace(/[\x00-\x0F]/g, function(ch) {
                    return '\\x0' + hex(ch);
                })
                .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) {
                    return '\\x' + hex(ch);
                });
        }

        function describeExpectation(expectation) {
            return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
        }

        function describeExpected(expected) {
            var descriptions = new Array(expected.length),
                i, j;

            for (i = 0; i < expected.length; i++) {
                descriptions[i] = describeExpectation(expected[i]);
            }

            descriptions.sort();

            if (descriptions.length > 0) {
                for (i = 1, j = 1; i < descriptions.length; i++) {
                    if (descriptions[i - 1] !== descriptions[i]) {
                        descriptions[j] = descriptions[i];
                        j++;
                    }
                }
                descriptions.length = j;
            }

            switch (descriptions.length) {
                case 1:
                    return descriptions[0];

                case 2:
                    return descriptions[0] + " or " + descriptions[1];

                default:
                    return descriptions.slice(0, -1).join(", ") +
                        ", or " +
                        descriptions[descriptions.length - 1];
            }
        }

        function describeFound(found) {
            return found ? "\"" + literalEscape(found) + "\"" : "end of input";
        }

        return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
    };

    function peg$parse(input, options) {
        options = options !== void 0 ? options : {};

        var peg$FAILED = {},

            peg$startRuleFunctions = {
                Start: peg$parseStart
            },
            peg$startRuleFunction = peg$parseStart,

            peg$c0 = peg$anyExpectation(),
            peg$c1 = /^[\n\r]/,
            peg$c2 = peg$classExpectation(["\n", "\r"], false, false),
            peg$c3 = /^[ \t]/,
            peg$c4 = peg$classExpectation([" ", "\t"], false, false),
            peg$c5 = function(a) {
                return text();
            },
            peg$c6 = "\\",
            peg$c7 = peg$literalExpectation("\\", false),
            peg$c8 = function() {
                return null;
            },
            peg$c9 = /^[@]/,
            peg$c10 = peg$classExpectation(["@"], false, false),
            peg$c11 = /^[a-zA-Z_$]/,
            peg$c12 = peg$classExpectation([
                ["a", "z"],
                ["A", "Z"], "_", "$"
            ], false, false),
            peg$c13 = /^[a-zA-Z_$0-9]/,
            peg$c14 = peg$classExpectation([
                ["a", "z"],
                ["A", "Z"], "_", "$", ["0", "9"]
            ], false, false),
            peg$c15 = function() {
                return text();
            },
            peg$c16 = "let",
            peg$c17 = peg$literalExpectation("let", false),
            peg$c18 = "set",
            peg$c19 = peg$literalExpectation("set", false),
            peg$c20 = "site",
            peg$c21 = peg$literalExpectation("site", false),
            peg$c22 = "call",
            peg$c23 = peg$literalExpectation("call", false),
            peg$c24 = "map",
            peg$c25 = peg$literalExpectation("map", false),
            peg$c26 = "imap",
            peg$c27 = peg$literalExpectation("imap", false),
            peg$c28 = "unmap",
            peg$c29 = peg$literalExpectation("unmap", false),
            peg$c30 = "iunmap",
            peg$c31 = peg$literalExpectation("iunmap", false),
            peg$c32 = "command",
            peg$c33 = peg$literalExpectation("command", false),
            peg$c34 = "\"",
            peg$c35 = peg$literalExpectation("\"", false),
            peg$c36 = /^[^\n]/,
            peg$c37 = peg$classExpectation(["\n"], true, false),
            peg$c38 = function(a) {
                return a;
            },
            peg$c39 = function() {
                return '';
            },
            peg$c40 = "'",
            peg$c41 = peg$literalExpectation("'", false),
            peg$c42 = function(a) {
                return a.join('');
            },
            peg$c43 = ".",
            peg$c44 = peg$literalExpectation(".", false),
            peg$c45 = "0",
            peg$c46 = peg$literalExpectation("0", false),
            peg$c47 = function() {
                return parseFloat(text());
            },
            peg$c48 = function() {
                return parseFloat(text());
            },
            peg$c49 = function() {
                return 0;
            },
            peg$c50 = /^[1-9]/,
            peg$c51 = peg$classExpectation([
                ["1", "9"]
            ], false, false),
            peg$c52 = /^[0-9]/,
            peg$c53 = peg$classExpectation([
                ["0", "9"]
            ], false, false),
            peg$c54 = function() {
                return parseInt(text(), 10);
            },
            peg$c55 = function(expr) {
                return expr;
            },
            peg$c56 = ",",
            peg$c57 = peg$literalExpectation(",", false),
            peg$c58 = function(head, expr) {
                return expr;
            },
            peg$c59 = function(head, tail) {
                return [head].concat(tail);
            },
            peg$c60 = "[",
            peg$c61 = peg$literalExpectation("[", false),
            peg$c62 = "]",
            peg$c63 = peg$literalExpectation("]", false),
            peg$c64 = function() {
                return [];
            },
            peg$c65 = function(elems) {
                return elems;
            },
            peg$c66 = function(head, a) {
                return a;
            },
            peg$c67 = function(head, tail) {
                var result = scopeIdentifiers[head];
                tail.forEach(e => result = result[e]);
                return result;
            },
            peg$c68 = "=",
            peg$c69 = peg$literalExpectation("=", false),
            peg$c70 = function(a, b) {
                scopeIdentifiers[a] = b;
                var r = {};
                r[a] = b;
                return r;
            },
            peg$c71 = function(a, b, c) {
                scopeIdentifiers[a] = {
                    [b]: c
                };
                a = objectPlural(a);
                var r = {};
                r[a] = {};
                r[a][b] = c;
                return r;
            },
            peg$c72 = "no",
            peg$c73 = peg$literalExpectation("no", false),
            peg$c74 = function(a) {
                var r = {};
                r[a] = false;
                return r;
            },
            peg$c75 = function(a) {
                var r = {};
                r[a] = true;
                return r;
            },
            peg$c76 = "{",
            peg$c77 = peg$literalExpectation("{", false),
            peg$c78 = "}",
            peg$c79 = peg$literalExpectation("}", false),
            peg$c80 = function(a, b) {
                var r = {
                    sites: {}
                };
                r.sites[a] = b;
                return r;
            },
            peg$c81 = function(a, b) {
                return [a].concat(b);
            },
            peg$c82 = function(a) {
                return [a];
            },
            peg$c83 = function(a, b) {
                return {
                    MAPPINGS: a + ' ' + b.join(' ')
                };
            },
            peg$c84 = function(a, b, c) {
                return {
                    MAPPINGS: [a, b, c.join('')].join(' ')
                };
            },
            peg$c85 = function(a) {
                return {
                    MAPPINGS: 'call ' + a.join('')
                };
            },
            peg$c86 = /^[a-zA-Z]/,
            peg$c87 = peg$classExpectation([
                ["a", "z"],
                ["A", "Z"]
            ], false, false),
            peg$c88 = function(a, b) {
                var r = {
                    COMMANDS: {}
                };
                r.COMMANDS[a.join('')] = b.join('');
                return r;
            },
            peg$c89 = "}}",
            peg$c90 = peg$literalExpectation("}}", false),
            peg$c91 = function(a, b) {
                return [a].concat(b);
            },
            peg$c92 = "(",
            peg$c93 = peg$literalExpectation("(", false),
            peg$c94 = ")",
            peg$c95 = peg$literalExpectation(")", false),
            peg$c96 = function(a) {
                return a || [];
            },
            peg$c97 = "{{",
            peg$c98 = peg$literalExpectation("{{", false),
            peg$c99 = function(a) {
                return a.join('');
            },
            peg$c100 = "->",
            peg$c101 = peg$literalExpectation("->", false),
            peg$c102 = function(a) {
                var result = {
                    AUTOFUNCTIONS: {}
                };
                result.AUTOFUNCTIONS[autoJsLength] = a;
                autoJsLength++;
                return result;
            },
            peg$c103 = function(a, b, c) {
                var result = {
                    FUNCTIONS: {}
                };
                result.FUNCTIONS[a] = '(function(' + (b || []).join(',') + ')' +
                    '{' + c + '})';
                return result;
            },
            peg$c104 = "unmapAll",
            peg$c105 = peg$literalExpectation("unmapAll", false),
            peg$c106 = "iunmapAll",
            peg$c107 = peg$literalExpectation("iunmapAll", false),
            peg$c108 = function() {
                return {
                    MAPPINGS: text()
                };
            },
            peg$c109 = function() {
                return parseScope([]);
            },
            peg$c110 = function(a) {
                return parseScope(a);
            },

            peg$currPos = 0,
            peg$savedPos = 0,
            peg$posDetailsCache = [{
                line: 1,
                column: 1
            }],
            peg$maxFailPos = 0,
            peg$maxFailExpected = [],
            peg$silentFails = 0,

            peg$result;

        if ("startRule" in options) {
            if (!(options.startRule in peg$startRuleFunctions)) {
                throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
            }

            peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
        }

        function text() {
            return input.substring(peg$savedPos, peg$currPos);
        }

        function location() {
            return peg$computeLocation(peg$savedPos, peg$currPos);
        }

        function expected(description, location) {
            location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

            throw peg$buildStructuredError(
                [peg$otherExpectation(description)],
                input.substring(peg$savedPos, peg$currPos),
                location
            );
        }

        function error(message, location) {
            location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

            throw peg$buildSimpleError(message, location);
        }

        function peg$literalExpectation(text, ignoreCase) {
            return {
                type: "literal",
                text: text,
                ignoreCase: ignoreCase
            };
        }

        function peg$classExpectation(parts, inverted, ignoreCase) {
            return {
                type: "class",
                parts: parts,
                inverted: inverted,
                ignoreCase: ignoreCase
            };
        }

        function peg$anyExpectation() {
            return {
                type: "any"
            };
        }

        function peg$endExpectation() {
            return {
                type: "end"
            };
        }

        function peg$otherExpectation(description) {
            return {
                type: "other",
                description: description
            };
        }

        function peg$computePosDetails(pos) {
            var details = peg$posDetailsCache[pos],
                p;

            if (details) {
                return details;
            } else {
                p = pos - 1;
                while (!peg$posDetailsCache[p]) {
                    p--;
                }

                details = peg$posDetailsCache[p];
                details = {
                    line: details.line,
                    column: details.column
                };

                while (p < pos) {
                    if (input.charCodeAt(p) === 10) {
                        details.line++;
                        details.column = 1;
                    } else {
                        details.column++;
                    }

                    p++;
                }

                peg$posDetailsCache[pos] = details;
                return details;
            }
        }

        function peg$computeLocation(startPos, endPos) {
            var startPosDetails = peg$computePosDetails(startPos),
                endPosDetails = peg$computePosDetails(endPos);

            return {
                start: {
                    offset: startPos,
                    line: startPosDetails.line,
                    column: startPosDetails.column
                },
                end: {
                    offset: endPos,
                    line: endPosDetails.line,
                    column: endPosDetails.column
                }
            };
        }

        function peg$fail(expected) {
            if (peg$currPos < peg$maxFailPos) {
                return;
            }

            if (peg$currPos > peg$maxFailPos) {
                peg$maxFailPos = peg$currPos;
                peg$maxFailExpected = [];
            }

            peg$maxFailExpected.push(expected);
        }

        function peg$buildSimpleError(message, location) {
            return new peg$SyntaxError(message, null, null, location);
        }

        function peg$buildStructuredError(expected, found, location) {
            return new peg$SyntaxError(
                peg$SyntaxError.buildMessage(expected, found),
                expected,
                found,
                location
            );
        }

        function peg$parseStart() {
            var s0;

            s0 = peg$parseScope();

            return s0;
        }

        function peg$parseEOF() {
            var s0, s1;

            s0 = peg$currPos;
            peg$silentFails++;
            if (input.length > peg$currPos) {
                s1 = input.charAt(peg$currPos);
                peg$currPos++;
            } else {
                s1 = peg$FAILED;
                if (peg$silentFails === 0) {
                    peg$fail(peg$c0);
                }
            }
            peg$silentFails--;
            if (s1 === peg$FAILED) {
                s0 = void 0;
            } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
            }

            return s0;
        }

        function peg$parseEOL() {
            var s0;

            if (peg$c1.test(input.charAt(peg$currPos))) {
                s0 = input.charAt(peg$currPos);
                peg$currPos++;
            } else {
                s0 = peg$FAILED;
                if (peg$silentFails === 0) {
                    peg$fail(peg$c2);
                }
            }

            return s0;
        }

        function peg$parseWhiteSpace() {
            var s0;

            if (peg$c3.test(input.charAt(peg$currPos))) {
                s0 = input.charAt(peg$currPos);
                peg$currPos++;
            } else {
                s0 = peg$FAILED;
                if (peg$silentFails === 0) {
                    peg$fail(peg$c4);
                }
            }

            return s0;
        }

        function peg$parseMapIdentifier() {
            var s0, s1, s2, s3, s4, s5;

            s0 = peg$currPos;
            s1 = [];
            s2 = peg$currPos;
            s3 = peg$currPos;
            peg$silentFails++;
            s4 = peg$parseWhiteSpace();
            peg$silentFails--;
            if (s4 === peg$FAILED) {
                s3 = void 0;
            } else {
                peg$currPos = s3;
                s3 = peg$FAILED;
            }
            if (s3 !== peg$FAILED) {
                s4 = peg$currPos;
                peg$silentFails++;
                s5 = peg$parseEOL();
                peg$silentFails--;
                if (s5 === peg$FAILED) {
                    s4 = void 0;
                } else {
                    peg$currPos = s4;
                    s4 = peg$FAILED;
                }
                if (s4 !== peg$FAILED) {
                    if (input.length > peg$currPos) {
                        s5 = input.charAt(peg$currPos);
                        peg$currPos++;
                    } else {
                        s5 = peg$FAILED;
                        if (peg$silentFails === 0) {
                            peg$fail(peg$c0);
                        }
                    }
                    if (s5 !== peg$FAILED) {
                        s3 = [s3, s4, s5];
                        s2 = s3;
                    } else {
                        peg$currPos = s2;
                        s2 = peg$FAILED;
                    }
                } else {
                    peg$currPos = s2;
                    s2 = peg$FAILED;
                }
            } else {
                peg$currPos = s2;
                s2 = peg$FAILED;
            }
            if (s2 !== peg$FAILED) {
                while (s2 !== peg$FAILED) {
                    s1.push(s2);
                    s2 = peg$currPos;
                    s3 = peg$currPos;
                    peg$silentFails++;
                    s4 = peg$parseWhiteSpace();
                    peg$silentFails--;
                    if (s4 === peg$FAILED) {
                        s3 = void 0;
                    } else {
                        peg$currPos = s3;
                        s3 = peg$FAILED;
                    }
                    if (s3 !== peg$FAILED) {
                        s4 = peg$currPos;
                        peg$silentFails++;
                        s5 = peg$parseEOL();
                        peg$silentFails--;
                        if (s5 === peg$FAILED) {
                            s4 = void 0;
                        } else {
                            peg$currPos = s4;
                            s4 = peg$FAILED;
                        }
                        if (s4 !== peg$FAILED) {
                            if (input.length > peg$currPos) {
                                s5 = input.charAt(peg$currPos);
                                peg$currPos++;
                            } else {
                                s5 = peg$FAILED;
                                if (peg$silentFails === 0) {
                                    peg$fail(peg$c0);
                                }
                            }
                            if (s5 !== peg$FAILED) {
                                s3 = [s3, s4, s5];
                                s2 = s3;
                            } else {
                                peg$currPos = s2;
                                s2 = peg$FAILED;
                            }
                        } else {
                            peg$currPos = s2;
                            s2 = peg$FAILED;
                        }
                    } else {
                        peg$currPos = s2;
                        s2 = peg$FAILED;
                    }
                }
            } else {
                s1 = peg$FAILED;
            }
            if (s1 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c5(s1);
            }
            s0 = s1;

            return s0;
        }

        function peg$parseLineSeparator() {
            var s0, s1, s2, s3, s4, s5, s6;

            s0 = peg$currPos;
            s1 = [];
            s2 = peg$parseWhiteSpace();
            while (s2 !== peg$FAILED) {
                s1.push(s2);
                s2 = peg$parseWhiteSpace();
            }
            if (s1 !== peg$FAILED) {
                s2 = [];
                s3 = peg$parseEOL();
                if (s3 !== peg$FAILED) {
                    while (s3 !== peg$FAILED) {
                        s2.push(s3);
                        s3 = peg$parseEOL();
                    }
                } else {
                    s2 = peg$FAILED;
                }
                if (s2 !== peg$FAILED) {
                    s3 = [];
                    s4 = peg$parseWhiteSpace();
                    while (s4 !== peg$FAILED) {
                        s3.push(s4);
                        s4 = peg$parseWhiteSpace();
                    }
                    if (s3 !== peg$FAILED) {
                        if (input.charCodeAt(peg$currPos) === 92) {
                            s4 = peg$c6;
                            peg$currPos++;
                        } else {
                            s4 = peg$FAILED;
                            if (peg$silentFails === 0) {
                                peg$fail(peg$c7);
                            }
                        }
                        if (s4 !== peg$FAILED) {
                            s5 = [];
                            s6 = peg$parseWhiteSpace();
                            while (s6 !== peg$FAILED) {
                                s5.push(s6);
                                s6 = peg$parseWhiteSpace();
                            }
                            if (s5 !== peg$FAILED) {
                                peg$savedPos = s0;
                                s1 = peg$c8();
                                s0 = s1;
                            } else {
                                peg$currPos = s0;
                                s0 = peg$FAILED;
                            }
                        } else {
                            peg$currPos = s0;
                            s0 = peg$FAILED;
                        }
                    } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                    }
                } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                }
            } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
            }

            return s0;
        }

        function peg$parse_() {
            var s0, s1;

            s0 = [];
            s1 = peg$parseWhiteSpace();
            if (s1 === peg$FAILED) {
                s1 = peg$parseLineSeparator();
            }
            if (s1 !== peg$FAILED) {
                while (s1 !== peg$FAILED) {
                    s0.push(s1);
                    s1 = peg$parseWhiteSpace();
                    if (s1 === peg$FAILED) {
                        s1 = peg$parseLineSeparator();
                    }
                }
            } else {
                s0 = peg$FAILED;
            }

            return s0;
        }

        function peg$parse__() {
            var s0, s1;

            s0 = [];
            s1 = peg$parseWhiteSpace();
            if (s1 === peg$FAILED) {
                s1 = peg$parseLineSeparator();
            }
            while (s1 !== peg$FAILED) {
                s0.push(s1);
                s1 = peg$parseWhiteSpace();
                if (s1 === peg$FAILED) {
                    s1 = peg$parseLineSeparator();
                }
            }

            return s0;
        }

        function peg$parseIdentifier() {
            var s0, s1, s2, s3, s4;

            s0 = peg$currPos;
            s1 = peg$currPos;
            if (peg$c9.test(input.charAt(peg$currPos))) {
                s2 = input.charAt(peg$currPos);
                peg$currPos++;
            } else {
                s2 = peg$FAILED;
                if (peg$silentFails === 0) {
                    peg$fail(peg$c10);
                }
            }
            if (s2 !== peg$FAILED) {
                if (peg$c9.test(input.charAt(peg$currPos))) {
                    s3 = input.charAt(peg$currPos);
                    peg$currPos++;
                } else {
                    s3 = peg$FAILED;
                    if (peg$silentFails === 0) {
                        peg$fail(peg$c10);
                    }
                }
                if (s3 !== peg$FAILED) {
                    s2 = [s2, s3];
                    s1 = s2;
                } else {
                    peg$currPos = s1;
                    s1 = peg$FAILED;
                }
            } else {
                peg$currPos = s1;
                s1 = peg$FAILED;
            }
            if (s1 === peg$FAILED) {
                s1 = null;
            }
            if (s1 !== peg$FAILED) {
                if (peg$c11.test(input.charAt(peg$currPos))) {
                    s2 = input.charAt(peg$currPos);
                    peg$currPos++;
                } else {
                    s2 = peg$FAILED;
                    if (peg$silentFails === 0) {
                        peg$fail(peg$c12);
                    }
                }
                if (s2 !== peg$FAILED) {
                    s3 = [];
                    if (peg$c13.test(input.charAt(peg$currPos))) {
                        s4 = input.charAt(peg$currPos);
                        peg$currPos++;
                    } else {
                        s4 = peg$FAILED;
                        if (peg$silentFails === 0) {
                            peg$fail(peg$c14);
                        }
                    }
                    while (s4 !== peg$FAILED) {
                        s3.push(s4);
                        if (peg$c13.test(input.charAt(peg$currPos))) {
                            s4 = input.charAt(peg$currPos);
                            peg$currPos++;
                        } else {
                            s4 = peg$FAILED;
                            if (peg$silentFails === 0) {
                                peg$fail(peg$c14);
                            }
                        }
                    }
                    if (s3 !== peg$FAILED) {
                        peg$savedPos = s0;
                        s1 = peg$c15();
                        s0 = s1;
                    } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                    }
                } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                }
            } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
            }

            return s0;
        }

        function peg$parseLET() {
            var s0;

            if (input.substr(peg$currPos, 3) === peg$c16) {
                s0 = peg$c16;
                peg$currPos += 3;
            } else {
                s0 = peg$FAILED;
                if (peg$silentFails === 0) {
                    peg$fail(peg$c17);
                }
            }

            return s0;
        }

        function peg$parseSET() {
            var s0;

            if (input.substr(peg$currPos, 3) === peg$c18) {
                s0 = peg$c18;
                peg$currPos += 3;
            } else {
                s0 = peg$FAILED;
                if (peg$silentFails === 0) {
                    peg$fail(peg$c19);
                }
            }

            return s0;
        }

        function peg$parseSITE() {
            var s0;

            if (input.substr(peg$currPos, 4) === peg$c20) {
                s0 = peg$c20;
                peg$currPos += 4;
            } else {
                s0 = peg$FAILED;
                if (peg$silentFails === 0) {
                    peg$fail(peg$c21);
                }
            }

            return s0;
        }

        function peg$parseCALL() {
            var s0;

            if (input.substr(peg$currPos, 4) === peg$c22) {
                s0 = peg$c22;
                peg$currPos += 4;
            } else {
                s0 = peg$FAILED;
                if (peg$silentFails === 0) {
                    peg$fail(peg$c23);
                }
            }

            return s0;
        }

        function peg$parseMAP() {
            var s0;

            if (input.substr(peg$currPos, 3) === peg$c24) {
                s0 = peg$c24;
                peg$currPos += 3;
            } else {
                s0 = peg$FAILED;
                if (peg$silentFails === 0) {
                    peg$fail(peg$c25);
                }
            }

            return s0;
        }

        function peg$parseIMAP() {
            var s0;

            if (input.substr(peg$currPos, 4) === peg$c26) {
                s0 = peg$c26;
                peg$currPos += 4;
            } else {
                s0 = peg$FAILED;
                if (peg$silentFails === 0) {
                    peg$fail(peg$c27);
                }
            }

            return s0;
        }

        function peg$parseUNMAP() {
            var s0;

            if (input.substr(peg$currPos, 5) === peg$c28) {
                s0 = peg$c28;
                peg$currPos += 5;
            } else {
                s0 = peg$FAILED;
                if (peg$silentFails === 0) {
                    peg$fail(peg$c29);
                }
            }

            return s0;
        }

        function peg$parseIUNMAP() {
            var s0;

            if (input.substr(peg$currPos, 6) === peg$c30) {
                s0 = peg$c30;
                peg$currPos += 6;
            } else {
                s0 = peg$FAILED;
                if (peg$silentFails === 0) {
                    peg$fail(peg$c31);
                }
            }

            return s0;
        }

        function peg$parseCOMMAND() {
            var s0;

            if (input.substr(peg$currPos, 7) === peg$c32) {
                s0 = peg$c32;
                peg$currPos += 7;
            } else {
                s0 = peg$FAILED;
                if (peg$silentFails === 0) {
                    peg$fail(peg$c33);
                }
            }

            return s0;
        }

        function peg$parseComment() {
            var s0, s1, s2, s3, s4;
